# slack-codex-router

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: projects.example.yaml  projects.yaml
legacy/v1/: README.md
ops/: com.builtin.pb.slack-codex-router.plist
scripts/: run-router.sh  start-router.sh
src/slack_codex_router/: codex_events.py  codex_runner.py  commands.py  config.py  job_manager.py  main.py  registry.py  slack_app.py  store.py
tests/: conftest.py  test_codex_events.py  test_codex_runner.py  test_commands.py  test_config.py  test_integration_router.py  test_job_manager.py  test_main.py  test_slack_app.py  test_smoke.py  test_start_router.py  test_store.py
v2/: .env.example  package-lock.json  package.json  vitest.fast.config.ts  vitest.live-codex.config.ts  vitest.real-integration.config.ts
v2/src/: config.ts
v2/test/: app_server_client.test.ts  app_server_process.test.ts  app_server_process_cleanup.test.ts  app_server_process_stderr.test.ts  config.test.ts  config_absolute_paths.test.ts  integration_runtime_flow.test.ts  integration_slack_controls.test.ts  launcher.test.ts  launcher_bin_smoke.test.ts  launcher_main_entry.test.ts  merge_to_main.test.ts  merge_to_main_default_runner.test.ts  repository_status.test.ts  repository_status_default_runner.test.ts  restart_recovery.test.ts  restart_recovery_matrix.test.ts  restart_recovery_no_intent.test.ts  router_bin_smoke.test.ts  router_bootstrap.test.ts  router_bootstrap_missing_projects.test.ts  router_bootstrap_wiring.test.ts  router_events.test.ts  (+23 more)
(+81 files in other folders)
