[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-codex-router"
version = "0.1.0"
description = "Slack control plane for routing Codex sessions into local project directories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.2",
  "slack-bolt>=1.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
slack-codex-router = "slack_codex_router.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
